# conan-issue-17549

./: .gitignore  1.setup.sh  2.install.sh  3.build.sh  CMakeLists.txt  README.md  build-all.sh  common.cmake  conanfilews.py  conanws.py  pyreq.py
1Wrappers/: CMakeLists.txt  conanfile.py
1Wrappers/include/: Wrappers.hpp
1Wrappers/src/: lib.cpp  main.cpp
2Subproject/: CMakeLists.txt  conanfile.py
2Subproject/src/: lib.cpp  main.cpp
3BigProject/: CMakeLists.txt  conanfile.py
3BigProject/src/: lib.cpp  main.cpp
pyreq/: conanfile.py
